--- a/custom.css
+++ b/custom.css
@@ -1,5 +1,7 @@
-li {
-  margin-top: 10px;
+/** サイト全体の横幅 **/
+
+.container-lg {
+  max-width: 800px;
 }
 
 body {
@@ -11,7 +13,7 @@ body {
 
 p,ul,ol {
   margin-bottom: 1.7em !important;
-  margin-left: 1em;
+  margin-left: 2em;
   line-height: 1.6em;
 }
 
@@ -47,7 +49,8 @@ h3 {
   color: #474747;
   border-radius: 0 10px 10px 0;
   margin-left: 0.8em;
-  margin-top: 2.0em !important;
+  margin-top: 2.5em !important;
+  margin-bottom: 1.5em !important;
 }
 
 h3:before {
@@ -150,3 +153,21 @@ ul, ol {
   margin-top: 1.5em !important;
 }
 
+li {
+  margin-top: 10px;
+}
+
+
+/** 引用文 **/
+
+blockquote {
+  padding-top: 0.6em !important;
+  padding-bottom: 0.1em !important;
+  margin-left: 2em !important;
+  border-left: 3px #0969da solid !important;
+  color: #000 !important;
+}
+
+blockquote > p {
+  margin-left: 0em !important;
+}
