見出し2における半角スペースの表示サイズを調整しました。

--- a/custom.css
+++ b/custom.css
@@ -24,6 +24,7 @@ h2 {
   position: relative;
   padding-left: 1.2em;/*アイコン分のスペース*/
   line-height: 1.4;
+  word-spacing: 0.5em !important;
 }
 
 h2:before {
