上下間隔のさらなる調整

--- a/custom.css
+++ b/custom.css
@@ -168,13 +168,12 @@ li {
 }
 
 ul ul > li, ul ol > li, ol ul > li, ol ol > li {
-  margin-top: 5px !important;
+  margin-top: 0 !important;
 }
 
-/* 3段階目の li */
 ul ul ul > li, ul ul ol > li, ul ol ul > li, ul ol ol > li,
 ol ul ul > li, ol ul ol > li, ol ol ul > li, ol ol ol > li {
-  margin-top: 5px !important;
+  margin-top: 0 !important;
 }
 
 /** 引用文 **/
